--- a/_scss/partials/_wraps.scss
+++ b/_scss/partials/_wraps.scss
@@ -13,22 +13,9 @@
     padding-top: 3em;
   }
   @include breakpoint($desktop) {
-    max-width: 58em;
+    max-width: 50em;
     body.page .page-wrapper & { // shrink page content max-width
       max-width:44em;
     }
   }
-  @include breakpoint($desktop-medium) {
-    max-width: 70em;
-    body.page .page-wrapper & { // keep page content the same max-width
-      max-width: 70em;
-    }
-  }
-  @include breakpoint($desktop-large) {
-    max-width: 80.500em;
-  }
-  @include breakpoint($desktop-huge) {
-    max-width: 90em;
-  }
-
 }
